2008-12-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacsclient.c (print_help_and_exit): Describe what an empty
	string argument does for --alternate-editor.
	(set_socket): Make it possible to not exit in case of an error.
	(start_daemon_and_retry_set_socket): New function.
	(main): Use it.  Restore the NULL value for socket_name and
	server_file after the set_socket call.

2008-12-03  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacsclient.c: Include <arpa/inet.h>.

2008-12-01  Dan Nicolaescu  <dann@ics.uci.edu>

	* make-docfile.c (scan_lisp_file): Use xmalloc instead of malloc.

2008-11-22  Derek Peschel  <dpeschel@eskimo.com>  (tiny change)

	* etags.c (add_regex): Pass correct length to re_compile_pattern.

2008-11-02  Chong Yidong  <cyd@stupidchicken.com>

	* emacsclient.c (window_system): Delete redundant variable.
	(decode_options): Don't use it.
	(find_tty): New function.
	(main): Use find_tty, and don't use window_system.

2008-11-01  Eli Zaretskii  <eliz@gnu.org>

	* emacsclient.c (main) [WINDOWSNT]: Don't ifdef away the call to
	`ttyname'.
	(w32_getenv): Treat $TERM specially: if not found in the
	environment and in the Registry, return "w32console".
	(ttyname) [WINDOWSNT]: New function.

2008-10-31  Andreas Schwab  <schwab@suse.de>

	* emacsclient.c (main): Don't force sending tty when in eval mode.

2008-10-30  Chong Yidong  <cyd@stupidchicken.com>

	* emacsclient.c (main): If using the current frame, send tty
	information to Emacs in case daemon mode needs to occupy this tty.

2008-10-29  Juanma Barranquero  <lekktu@gmail.com>

	* emacsclient.c (EXTRA_SPACE): New macro.
	(get_server_config, set_local_socket): Use it.

	* makefile.w32-in ($(BLD)/sorted-doc.$(O)): Remove spurious backslash.
	Reported by Guillaume Conjat <gconjat.ext@orange-ftgroup.com>.

2008-10-29  Ulrich Mueller  <ulm@gentoo.org>

	* emacsclient.c (set_local_socket): Use TMPDIR (default /tmp)
	instead of hardcoded /tmp.

2008-10-13  Dan Nicolaescu  <dann@ics.uci.edu>
